--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             }
             // percent() to display percentage
             function percent() {
-                var a, b, c;
+                var a, c;
                 a = Number(document.getElementById("result").value);
                 c = a / 100;
                 document.getElementById("result").value = c + "";
